--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ html, body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #f0f0f0;
+    background-color: white;
 }
 
 /* Style for the container div */
@@ -13,29 +13,36 @@ html, body {
     text-align: center;
 }
 
-.thumbnail {
+.mediacard {
     width: 200px;
-    border: 1px solid #ccc;
+    border-radius: 10%;
+    border: 1px solid #fff;
     padding: 10px;
     background-color: #fff;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    transition: border 0.3s;
 }
 
-.thumbnail img {
+.mediacard:hover{
+    border: 1px solid #ccc;
+}
+
+.card-pic {
     max-width: 100%;
     height: auto;
+    border: none;
+    border-radius: 20%;
 }
 
-.thumbnail-text {
+.mediacard-text {
     margin-top: 10px;
 }
 
-.thumbnail-text h2 {
+.mediacard-text h2 {
     font-size: 18px;
     margin: 0;
 }
 
-.thumbnail-text p {
+.mediacarde-text p {
     font-size: 14px;
     margin: 0;
     color: #666;
